--- a/template/core-dist/src/assets/scss/_search.scss
+++ b/template/core-dist/src/assets/scss/_search.scss
@@ -115,6 +115,11 @@ $border-color: rgba(0, 0, 0, 0.2);
       color: $main-color;
     }
 
+    .search__content__pagination--bottom > div {
+      margin: 0 20px 20px 0;
+    }
+
+
     &__results {
 
       &__item {
