--- a/template/core-dist/src/assets/scss/_search.scss
+++ b/template/core-dist/src/assets/scss/_search.scss
@@ -11,6 +11,7 @@ $border-color: rgba(0, 0, 0, 0.2);
 
   &__layout {
     display: flex;
+    min-height: calc(100vh - 65px);
     background-color: #fff;
   }
 
