--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -89,12 +89,12 @@
         <result-item [fields]="res.fields" [id]="res.id" [entityType]="res.fields.entity_type" [queryString]="queryString" (showDetails)="showResult($event)"></result-item>
       </ng-container>
 
-      <result-item-details
-        *ngIf="showResultDetails"
-        [id]="resultId"
-        [entityType]="resultEntityType"
-        (closeDetails)="hideResultDetails()">
-      </result-item-details>
+      <!--<result-item-details-->
+        <!--*ngIf="showResultDetails"-->
+        <!--[id]="resultId"-->
+        <!--[entityType]="resultEntityType"-->
+        <!--(closeDetails)="hideResultDetails()">-->
+      <!--</result-item-details>-->
 
       <table-pagination
         *ngIf="searchResultsToDispaly.length >= 5"
