--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -1,3 +1,74 @@
+$title-color: #979797;
+
+.entity-view {
+  position: relative;
+  min-height: calc(100vh - 65px);
+
+  &__title {
+    padding: 25px 50px;
+    font-size: 20px;
+    font-weight: 500;
+    color: $title-color;
+  }
+
+  &__content {
+    position: absolute;
+    border-top: 2px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    min-height: calc(100% - 75px);
+    background-color: white;
+
+    &__title {
+      background-color: #F3F3F3;
+      padding-left: 50px;
+      height: 55px;
+      line-height: 55px;
+      font-size: 16px;
+      font-weight: 500;
+
+      &--first {
+        margin-top: 50px;
+      }
+    }
+
+    &__fields {
+      margin : 15px 45px;
+
+      &__item {
+        display: inline-block;
+        margin: 10px 5px;
+        width: 250px;
+        font-size: 14px;
+        vertical-align: top;
+
+        &__label {
+          margin-right: 5px;
+          font-weight: 600;
+        }
+
+        .label {
+
+          &--toggle {
+            display: inline-block;
+            line-height: 25px;
+            vertical-align: top;
+          }
+
+          &--active {
+            color: #5999E0;
+          }
+        }
+
+        &__toggle {
+          display: inline-block;
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
 .entity-view {
   &__card {
 
