--- a/template/core-dist/src/app/pages/users-page/user-view/user-view.component.html
+++ b/template/core-dist/src/app/pages/users-page/user-view/user-view.component.html
@@ -1,7 +1,56 @@
-<div class="user-view" *ngIf="entity">
-  <div>USER GENERAL INFO</div>
-  <div>ID: {{entity.id}}</div>
-  <div>Name: {{entity.name}}</div>
-  <div>Email: {{entity.email}}</div>
-  <div>Active: {{entity.active}}</div>
+<div class="entity-view">
+  <div class="entity-view__title">User Details</div>
+
+  <div *ngIf="entity" class="entity-view__content">
+
+    <div class="entity-view__content__title entity-view__content__title--first"> General Details </div>
+
+    <div class="entity-view__content__fields">
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">ID:</span>
+        <span>{{entity.id}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Name:</span>
+        <span>{{entity.name}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Email:</span>
+        <span>{{entity.email}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span [class.label--active]="entity.active==='true'" class="entity-view__content__fields__item__label label--toggle">Active:</span>
+        <md-slide-toggle class="entity-view__content__fields__item__toggle" [checked]="entity.active === 'true'" [disabled]="true"></md-slide-toggle>
+      </div>
+    </div>
+
+    <div class="entity-view__content__title"> Address </div>
+
+    <div class="entity-view__content__fields">
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Country:</span>
+        <span>{{entity.address.country}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">State:</span>
+        <span> {{entity.address.state}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">City:</span>
+        <span>{{entity.address.city}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Line 1:</span>
+        <span>{{entity.address.line1}} </span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Line 1:</span>
+        <span>{{entity.address.line2}} </span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Zip:</span>
+        <span>{{entity.address.zip}}</span>
+      </div>
+    </div>
+  </div>
 </div>
