--- a/template/core-dist/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/template/core-dist/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -1,7 +1,27 @@
-<div class="transaction-view" *ngIf="entity">
-  <div>TRANSACTION GENERAL INFO</div>
+<div class="entity-view">
+  <div class="entity-view__title">Transaction Details</div>
 
-  <div>ID: {{entity.id}}</div>
-  <div>Date: {{entity.date}}</div>
-  <div>Amount: {{entity.amount}}</div>
+  <div *ngIf="entity" class="entity-view__content">
+
+    <div class="entity-view__content__title entity-view__content__title--first"> General Details </div>
+
+    <div class="entity-view__content__fields">
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">ID:</span>
+        <span>{{entity.id}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Date:</span>
+        <span>{{entity.date}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Amount:</span>
+        <span>{{entity.amount}}</span>
+      </div>
+      <div class="entity-view__content__fields__item">
+        <span class="entity-view__content__fields__item__label">Processor Response:</span>
+        <span>{{entity.processorResponse.message}}</span>
+      </div>
+    </div>
+  </div>
 </div>
