Add single entity page for affiliate entity.

--- a/template/core-dist/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/template/core-dist/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -1,5 +1,5 @@
 <div class="entity-view">
-  <div class="entity-view__title">User Details</div>
+  <div class="entity-view__title">Merchant Provider Details</div>
 
   <div *ngIf="entity" class="entity-view__content">
 
