Enable update for product single entity page.

--- a/template/core-dist/src/app/pages/products-page/product-view/product-view.component.html
+++ b/template/core-dist/src/app/pages/products-page/product-view/product-view.component.html
@@ -1,5 +1,7 @@
-<div class="entity-view">
-  <div class="entity-view__title">Product Details</div>
+<div *ngIf="entity" class="entity-view">
+  <div class="entity-view__title">Product {{entity.name}}</div>
+
+  <div *ngIf="service.hasWritePermission()" class="entity-view__change-mode" (click)="changeMode()"><md-icon>{{viewMode ? 'border_color' : 'reply'}}</md-icon></div>
 
   <div *ngIf="entity" class="entity-view__content">
 
@@ -12,23 +14,36 @@
       </div>
       <div class="entity-view__content__fields__item">
         <span class="entity-view__content__fields__item__label">Name:</span>
-        <span>{{entity.name}}</span>
+        <span *ngIf="viewMode">{{entity.name}}</span>
+        <md-input *ngIf="updateMode" [(ngModel)]="entity.name"></md-input>
       </div>
       <div class="entity-view__content__fields__item">
         <span class="entity-view__content__fields__item__label">SKU:</span>
-        <span>{{entity.sku}}</span>
+        <span *ngIf="viewMode">{{entity.sku}}</span>
+        <md-input *ngIf="updateMode" [(ngModel)]="entity.sku"></md-input>
       </div>
       <div class="entity-view__content__fields__item">
         <span class="entity-view__content__fields__item__label">Ship:</span>
-        <span>{{entity.ship}}</span>
+        <span *ngIf="viewMode">{{entity.ship}}</span>
+        <md-input *ngIf="updateMode" [(ngModel)]="entity.ship"></md-input>
       </div>
       <div class="entity-view__content__fields__item">
         <span class="entity-view__content__fields__item__label">Shipping Delay:</span>
-        <span>{{entity.shippingDelay}}</span>
+        <span *ngIf="viewMode">{{entity.shippingDelay}}</span>
+        <md-input class="input--small" *ngIf="updateMode" [(ngModel)]="entity.shippingDelay"></md-input>
       </div>
     </div>
 
-    <div class="entity-view__content__title"> Fulfillment Provider </div>
+    <div class="entity-view__content__title">
+      Fulfillment Provider
+      <md-icon *ngIf="updateMode" [md-menu-trigger-for]="providersMenu">add</md-icon>
+    </div>
+
+    <md-menu #providersMenu="mdMenu">
+      <button md-menu-item *ngFor="let provider of fulfillmentProviders" (click)="selectFulfillmentProvider(provider)">
+        {{provider.name}}
+      </button>
+    </md-menu>
 
     <div class="entity-view__content__fields">
       <div class="entity-view__content__fields__item">
@@ -51,6 +66,11 @@
         <span class="entity-view__content__fields__item__label">Endpoint:</span>
         <span>{{entity.fulfillmentProvider.endpoint}}</span>
       </div>
+    </div>
+
+    <div *ngIf="updateMode" class="entity-view__content__buttons">
+      <div class="entity-view__content__buttons__update" (click)="updateEntity(entity)">Update</div>
+      <div class="entity-view__content__buttons__cancel" (click)="cancelUpdate()">Cancel</div>
     </div>
   </div>
 </div>
