Remove app top nav bar progress bar.

--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<md-progress-bar mode="indeterminate" *ngIf="_isLoadingRoute"></md-progress-bar>
+<!--<md-progress-bar mode="indeterminate" *ngIf="_isLoadingRoute"></md-progress-bar>-->
 <md-toolbar>
   <button md-icon-button (click)="toggleSidenav()" id="menu-toggler">
     <img src="/assets/images/ic_sort.svg">
