--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import "assets/scss/_menu.scss";
 @import "assets/scss/_dashboard.scss";
 @import "assets/scss/_search.scss";
+@import "assets/scss/_advanced-search.scss";
 
 /***************
   HTML Styles
