Remove unnecessary functions from advanced search component.

--- a/src/app/pages/advanced-search-page/advanced-search.component.html
+++ b/src/app/pages/advanced-search-page/advanced-search.component.html
@@ -1,7 +1,7 @@
 <div class="advanced-search">
   <div class="advanced-search__title">Advanced Search</div>
 
-  <div class="advanced-search__icon" (click)="changeMode()"><md-icon>search</md-icon></div>
+  <div class="advanced-search__icon"><md-icon>search</md-icon></div>
 
   <div class="advanced-search__content">
 
