Integrate advanced search with search page.

--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -29,7 +29,7 @@ $border-color: rgba(0, 0, 0, 0.2);
         autocomplete {
           position: absolute;
           z-index: 5;
-          width: 210px;
+          max-width: 350px;
           max-height: 230px;
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
           overflow: auto;
