Enable search by order ID

--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -49,24 +49,10 @@
         <span class="search__sidenav__subtitle"> Date </span>
 
         <span class="search__sidenav__title search__sidenav__title--after"> Refined by </span>
-        <span class="search__sidenav__subtitle"> Brand </span>
+        <span class="search__sidenav__subtitle"> City </span>
         <md-checkbox class="search__sidenav__item">Brand One</md-checkbox>
         <md-checkbox class="search__sidenav__item">Brand Two</md-checkbox>
         <md-checkbox class="search__sidenav__item">Brand Three</md-checkbox>
-
-        <span class="search__sidenav__subtitle"> Merchant </span>
-        <md-checkbox class="search__sidenav__item">Merchant One</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Merchant Two</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Merchant Three</md-checkbox>
-
-        <span class="search__sidenav__subtitle"> Product Category </span>
-        <md-checkbox class="search__sidenav__item">Diet</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Muscle</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Skin</md-checkbox>
-
-        <span class="search__sidenav__subtitle"> Sale Type </span>
-        <md-checkbox class="search__sidenav__item">Trial</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Straight</md-checkbox>
       </md-nav-list>
     </div>
 
