--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -55,7 +55,7 @@
       <md-icon class="topnav__profile__arrow" (click)="toggleDropdownMenu()">keyboard_arrow_down</md-icon>
 
       <div *ngIf="showDropdown" class="topnav__dropdown__menu">
-        <button md-menu-item class="topnav__dropdown__menu__profile" [routerLink]="['profile']">
+        <button md-menu-item class="topnav__dropdown__menu__profile" (click)="navigateToProfile()">
           <img class="topnav__dropdown__menu__profile__image" [src]="_userProfile.picture">
           <span>{{_userProfile.email}}</span>
         </button>
@@ -73,7 +73,7 @@
     <md-icon class="topnav__items--collapsed__icon" (click)="toggleCollapseMenu()">more_vert</md-icon>
 
     <div *ngIf="showCollapseMenu" class="topnav__items--collapsed__menu">
-      <div class="topnav__items--collapsed__menu__profile topnav__items--collapsed__menu__button" [routerLink]="['profile']">
+      <div class="topnav__items--collapsed__menu__profile topnav__items--collapsed__menu__button" (click)="navigateToProfile()">
         <img class="topnav__items--collapsed__menu__profile__image" [src]="_userProfile.picture">
         <span>{{_userProfile.email}}</span>
       </div>
